feat(api): :sparkles: integrate HTTP client for API communication and refactor GameSummary model
* Added `ApiBaseUrl` configuration for API communication in `appsettings.json`.
* Updated `GamesClient` and `GenresClient` to use `HttpClient` for API calls.
* Refactored `GameSummary` model to rename `Genre` to `GenreName` for improved clarity.
* Modified Home component to use asynchronous initialization (`OnInitializedAsync`) and updated binding for `GenreName`.
* Added `UserSecretsId` to the project file to support secure storage of sensitive configuration.

This enhancement improves API integration and ensures better data representation across components.

Signed-off-by: Abhiroop Santra <abhiroop.santra@gmail.com>

--- a/GameStore.Frontend/GameStore.Frontend.csproj
+++ b/GameStore.Frontend/GameStore.Frontend.csproj
@@ -4,5 +4,6 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <BlazorDisableThrowNavigationException>true</BlazorDisableThrowNavigationException>
+    <UserSecretsId>b94f428a-101a-4cfa-8250-69995bc76822</UserSecretsId>
   </PropertyGroup>
 </Project>
