--- a/GameStore.Frontend/GameStore.Frontend.csproj
+++ b/GameStore.Frontend/GameStore.Frontend.csproj
@@ -6,4 +6,7 @@
     <BlazorDisableThrowNavigationException>true</BlazorDisableThrowNavigationException>
     <UserSecretsId>b94f428a-101a-4cfa-8250-69995bc76822</UserSecretsId>
   </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="Converters\" />
+  </ItemGroup>
 </Project>
